[gd_scene load_steps=24 format=4 uid="uid://d4c0adjb3688m"]

[ext_resource type="Texture2D" uid="uid://wqf7ae6sw0af" path="res://images/world.png" id="1_3rhlx"]
[ext_resource type="Script" uid="uid://dynjoxueanbnl" path="res://scenes/world/world.gd" id="1_vadfg"]
[ext_resource type="PackedScene" uid="uid://cfkkjss0a1bc5" path="res://scenes/monster/monster.tscn" id="2_vadfg"]
[ext_resource type="Texture2D" uid="uid://cvowx3jkjgloi" path="res://images/shooting_star.png" id="3_j2gmx"]
[ext_resource type="PackedScene" uid="uid://dxt6dvahu0ip6" path="res://scenes/player/fairy_boy.tscn" id="3_l1hd3"]
[ext_resource type="Texture2D" uid="uid://bo2w7wucxrnst" path="res://images/star.png" id="4_gb53w"]
[ext_resource type="PackedScene" uid="uid://cghpnqrvmfvrq" path="res://scenes/objects/fence.tscn" id="5_l1hd3"]
[ext_resource type="PackedScene" uid="uid://bkd1il7gun27t" path="res://scenes/parrot/parrot.tscn" id="6_adcqc"]
[ext_resource type="Texture2D" uid="uid://dabmrgnaub2en" path="res://images/clouds.png" id="7_bq33v"]
[ext_resource type="Script" uid="uid://bh18gwu5grctn" path="res://scenes/world/tile_map_layer.gd" id="9_1yooq"]
[ext_resource type="PackedScene" uid="uid://hnh8mnniyyal" path="res://scenes/dialogues/dialogues.tscn" id="12_dlabj"]
[ext_resource type="Script" uid="uid://codw6x8lhl4re" path="res://scenes/world/audio.gd" id="12_umvgx"]
[ext_resource type="AudioStream" uid="uid://ccckcfblptrlp" path="res://audio/music/17 - Decisive Battle 2 - The Calamity.mp3" id="13_srmg5"]
[ext_resource type="AudioStream" uid="uid://ctc74qboelaww" path="res://audio/music/victory-gold-star-award-267259.mp3" id="14_umvgx"]
[ext_resource type="AudioStream" uid="uid://dg87hag4f62pa" path="res://audio/music/failure-4-with-gong-69906.mp3" id="15_mxkvs"]
[ext_resource type="AudioStream" uid="uid://biv5lh7da1k13" path="res://audio/sfx/electric-discharge-386160.mp3" id="16_m114p"]
[ext_resource type="AudioStream" uid="uid://s5oxl3gmdyb3" path="res://audio/sfx/electrical-current-outdoor-electric-box-102763.mp3" id="17_71ii3"]

[sub_resource type="Gradient" id="Gradient_5qq27"]
offsets = PackedFloat32Array(0.109091, 0.227273, 0.236364, 0.318182, 0.345455, 0.763636, 1)
colors = PackedColorArray(0, 0, 0.898039, 1, 0, 0, 0.8, 1, 0.783037, 0.793509, 1, 1, 0.481818, 0.481818, 0.481818, 1, 0.160784, 0.282353, 0.92549, 1, 0.615359, 0.671078, 0.96585, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dlabj"]
gradient = SubResource("Gradient_5qq27")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_srmg5"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.09
scale_max = 0.09
color_ramp = SubResource("GradientTexture1D_dlabj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bq33v"]
particle_flag_disable_z = true
velocity_pivot = Vector3(100, 0, 0)
direction = Vector3(1000, -100, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
gravity = Vector3(100, 100, 0)
scale_min = 0.1
scale_max = 0.1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bq33v"]
texture = ExtResource("7_bq33v")
texture_region_size = Vector2i(300, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-127.106, 6.27686, -74.5, -22, -7.5, -61, 44.5, -61, 72.5, -27, 109.5, -20, 142.611, 23.0303, 147.925, 58.4615, 114.5, 88, -85.5, 80, -100.5, 79)

[sub_resource type="TileSet" id="TileSet_1yooq"]
tile_size = Vector2i(200, 140)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 3
sources/14 = SubResource("TileSetAtlasSource_bq33v")

[node name="World" type="Node2D"]
script = ExtResource("1_vadfg")

[node name="WorldImg" type="Sprite2D" parent="."]
modulate = Color(1, 0.92, 0.92, 1)
position = Vector2(1859, 1146)
scale = Vector2(1.89115, 2.3098)
texture = ExtResource("1_3rhlx")

[node name="Stars" type="Node2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="Stars"]
position = Vector2(341, 750)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Stars"]
position = Vector2(211, 926)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D3" type="GPUParticles2D" parent="Stars"]
position = Vector2(358, 482)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D4" type="GPUParticles2D" parent="Stars"]
position = Vector2(461, 640)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D5" type="GPUParticles2D" parent="Stars"]
position = Vector2(1313, 296)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D6" type="GPUParticles2D" parent="Stars"]
position = Vector2(1313, 296)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D7" type="GPUParticles2D" parent="Stars"]
position = Vector2(1313, 296)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D8" type="GPUParticles2D" parent="Stars"]
position = Vector2(1686, 669)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D9" type="GPUParticles2D" parent="Stars"]
position = Vector2(1269, 938)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D10" type="GPUParticles2D" parent="Stars"]
position = Vector2(1581, 240)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D11" type="GPUParticles2D" parent="Stars"]
position = Vector2(609, 147)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D12" type="GPUParticles2D" parent="Stars"]
position = Vector2(1360, 128)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D13" type="GPUParticles2D" parent="Stars"]
position = Vector2(654, 855)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D14" type="GPUParticles2D" parent="Stars"]
position = Vector2(1687, 420)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D15" type="GPUParticles2D" parent="Stars"]
position = Vector2(1366, 516)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D16" type="GPUParticles2D" parent="Stars"]
position = Vector2(189, 102)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D17" type="GPUParticles2D" parent="Stars"]
position = Vector2(1292, 760)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D18" type="GPUParticles2D" parent="Stars"]
position = Vector2(1535, 823)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D19" type="GPUParticles2D" parent="Stars"]
position = Vector2(290, 285)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D20" type="GPUParticles2D" parent="Stars"]
position = Vector2(658, 441)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D21" type="GPUParticles2D" parent="Stars"]
position = Vector2(977, 395)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D22" type="GPUParticles2D" parent="Stars"]
position = Vector2(943, 752)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="GPUParticles2D23" type="GPUParticles2D" parent="Stars"]
position = Vector2(969, 130)
amount = 1
texture = ExtResource("4_gb53w")
process_material = SubResource("ParticleProcessMaterial_srmg5")
metadata/_edit_group_ = true

[node name="ShootingStars" type="GPUParticles2D" parent="."]
position = Vector2(33, 304)
emitting = false
amount = 30
texture = ExtResource("3_j2gmx")
lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_bq33v")

[node name="Fence" parent="." instance=ExtResource("5_l1hd3")]
position = Vector2(876, 552)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_repeat = 2
position = Vector2(1966, 886)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADs//P/DgAAAAAAAADt//P/DgAAAAAAAADu//P/DgAAAAAAAADv//P/DgAAAAAAAADw//P/DgAAAAAAAADx//P/DgAAAAAAAADy//P/DgAAAAAAAADz//P/DgAAAAAAAAD0//P/DgAAAAAAAAD1//P/DgAAAAAAAAD2//P/DgAAAAAAAAD3//P/DgAAAAAAAAD4//P/DgAAAAAAAAD5//P/DgAAAAAAAAD6//P/DgAAAAAAAAD7//P/DgAAAAAAAAD8//P/DgAAAAAAAAD9//P/DgAAAAAAAAD+//P/DgAAAAAAAAD///P/DgAAAAAAAAAAAPP/DgAAAAAAAAD///T/DgAAAAAAAAD///X/DgAAAAAAAAD///b/DgAAAAAAAAD///f/DgAAAAAAAAD///j/DgAAAAAAAAD///n/DgAAAAAAAAD///r/DgAAAAAAAAD///v/DgAAAAAAAAD///z/DgAAAAAAAAD///3/DgAAAAAAAAD///7/DgAAAAAAAAD/////DgAAAAAAAAD//wAADgAAAAAAAAD//wEADgAAAAAAAAD//wIADgAAAAAAAAD//wMADgAAAAAAAADs/wIADgAAAAAAAADt/wIADgAAAAAAAADu/wIADgAAAAAAAADv/wIADgAAAAAAAADw/wIADgAAAAAAAADx/wIADgAAAAAAAADy/wIADgAAAAAAAADz/wIADgAAAAAAAAD0/wIADgAAAAAAAAD1/wIADgAAAAAAAAD2/wIADgAAAAAAAAD3/wIADgAAAAAAAAD4/wIADgAAAAAAAAD5/wIADgAAAAAAAAD6/wIADgAAAAAAAAD7/wIADgAAAAAAAAD8/wIADgAAAAAAAAD9/wIADgAAAAAAAAD+/wIADgAAAAAAAADs//T/DgAAAAAAAADs//X/DgAAAAAAAADs//b/DgAAAAAAAADs//f/DgAAAAAAAADs//j/DgAAAAAAAADs//n/DgAAAAAAAADs//r/DgAAAAAAAADs//v/DgAAAAAAAADs//z/DgAAAAAAAADs//3/DgAAAAAAAADs//7/DgAAAAAAAADs////DgAAAAAAAADs/wAADgAAAAAAAADs/wEADgAAAAAAAAA=")
tile_set = SubResource("TileSet_1yooq")
script = ExtResource("9_1yooq")

[node name="Fairy" parent="." instance=ExtResource("3_l1hd3")]
position = Vector2(-95, 328)

[node name="Parrot" parent="." instance=ExtResource("6_adcqc")]
position = Vector2(958, 15)

[node name="Monster" parent="." instance=ExtResource("2_vadfg")]
position = Vector2(92, 14)

[node name="SpecialAttacks" type="Node2D" parent="."]

[node name="Dialogues" parent="." instance=ExtResource("12_dlabj")]

[node name="Audio" type="Node" parent="."]
script = ExtResource("12_umvgx")

[node name="Music" type="Node" parent="Audio"]

[node name="Main" type="AudioStreamPlayer" parent="Audio/Music"]
stream = ExtResource("13_srmg5")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="Win" type="AudioStreamPlayer" parent="Audio/Music"]
stream = ExtResource("14_umvgx")
bus = &"Music"

[node name="Lose" type="AudioStreamPlayer" parent="Audio/Music"]
stream = ExtResource("15_mxkvs")
bus = &"Music"

[node name="Sfx" type="Node" parent="Audio"]

[node name="Shock" type="AudioStreamPlayer" parent="Audio/Sfx"]
stream = ExtResource("16_m114p")
pitch_scale = 1.5

[node name="FenceMoving" type="AudioStreamPlayer" parent="Audio/Sfx"]
stream = ExtResource("17_71ii3")
volume_db = 10.0
pitch_scale = 1.5
bus = &"SFX"

[connection signal="move_left" from="Fence" to="." method="_on_fence_move_left"]
[connection signal="player_shocked" from="Fence" to="." method="_on_fence_player_shocked"]
[connection signal="sword_beam" from="Fairy" to="." method="_sword_beam_action"]
[connection signal="black_orb" from="Monster" to="." method="_black_orb_action"]
